checkstyleparent27 (#178)
Signed-off-by: HARPER Jon <jon.harper87@gmail.com>
Co-authored-by: Etienne LESOT <etienne.lesot@rte-france.com>